--- a/cv.html
+++ b/cv.html
@@ -19,6 +19,15 @@
 				text-align: center;
 				margin-bottom: 50px;
 			}
+			}
+				.header img {
+					border-radius: 50%;
+					width: 150px;
+					height: auto;
+					object-fit: cover;
+					margin-right: 20px;
+					border-radius: 5px;
+				}
 
 			header h1 {
 				margin-top: 0;
@@ -85,6 +94,10 @@
 	</head>
 	<body>
 		<header>
+			<div class="container">
+			<div class="photo-section">
+				<img src="Photo.jpg" alt="Photo">
+			</div>
 			<h1>Curriculum Vitae</h1>
 			<p>Statisticien au Ministère de l'Agriculture, des Ressources Animales et Halieutiques</p>
 		</header>
