--- a/CV_GONGO_MAHAMOUDOU.html
+++ b/CV_GONGO_MAHAMOUDOU.html
@@ -62,7 +62,7 @@
 	<div class="container">
 	</div>
 	<div class="photo-section">
-	<img src ="P GONGO" alt="photo-section">
+	<img src ="../../P GONGO/ptoto-section.jpg" alt="photo-section">
 	</div>
 <div class="form-group">
 <h2>CURRICULUM VITAE</h2>
