--- a/cv.html
+++ b/cv.html
@@ -103,19 +103,22 @@
       </div>
       <div class="info">
         <h2>Contact</h2>
-        <p>Téléphone : +226 XX XX XX XX</p>
-        <p>Email : abdoulaye@example.com</p>
-        <p>Adresse : Ouagadougou, Burkina Faso</p>
+        <p>Téléphone : +22677299569</p>
+        <p>Email : belem.elkiss@gmail.com</p>
+        <p>Adresse : Borgo, Ouagadougou, Burkina Faso</p>
 
         <h2>Compétences</h2>
         <ul>
           <li>Programmation : C, JavaScript, VBA, HTML/CSS</li>
           <li>Communication</li>
+          <li>Pédagogie, Didactique des maths </li>
+          <li>Gestion des projets, Analyses des Politiques Economiques</li>
           <li>Analyse financière</li>
         </ul>
 
         <h2>Langues</h2>
         <ul>
+          <li>Mooré: courant </li>
           <li>Français : courant</li>
           <li>Anglais : intermédiaire</li>
         </ul>
@@ -130,19 +133,19 @@
 
       <section>
         <h2>Formations</h2>
-        <p><strong>Master en Macroéconomie et Gestion du Développement</strong></p>
-        <p><strong>CAPES en Mathématiques</strong></p>
-        <p><strong>Licence en Informatique (en cours)</strong></p>
-        <p><strong>Certificats : </strong>Cybersécurité, Web, etc.</p>
+        <p><strong> 2025 : <p><strong>Licence en Informatique (en cours)</strong></p>
+        <p><strong> 2019 : CAPES en Mathématiques</strong> <p><strong>CAPES en Mathématiques</strong></p>
+        <p><strong> 2017 : Master en Macroéconomie et Gestion du Développement</strong></p>
+        
+        <p><strong>Certificats : </strong>Cybersécurité, Economie, Informatique et Internet, TIC </p>
       </section>
 
       <section>
         <h2>Expériences</h2>
         <p><strong>Enseignant en Mathématiques</strong><br />
-        Enseignement au secondaire, préparation aux examens</p>
-
+        <p><strong>Enseignement au secondaire, préparation aux examens</strong><br />
         <p><strong>Développeur Web et Access</strong><br />
-        Conception d'applications de gestion immobilière et projets éducatifs</p>
+        <p><strong>Conception d'applications de gestion immobilière et projets éducatifs</strong><br />
       </section>
 
       <section>
