--- a/Indexe.html
+++ b/Indexe.html
@@ -50,7 +50,7 @@
 		</header>
 		
 		<ul>
-			<li><a href="etudiant1.html">BELEM Abdoulaye</a></li>
+			<li><a href="cv.html">BELEM Abdoulaye</a></li>
 			<li><a href="etudiant2.html">GONGO Mahamoudou</a></li>
 			<li><a href="etudiant3.html">KAGAMBEGA Rasmané</a></li>
 			<li><a href="etudiant4.html">SALOUKA Yacouba</a></li>
